objects/Lead.object
<CustomObject>
    <fields>
        <fullName>MQL_Lead__c</fullName>
        <defaultValue>false</defaultValue>
        <description>indicates that at somepoint the lead had been assigned to the MQL queue</description>
        <inlineHelpText>indicates that at somepoint the lead had been assigned to the MQL queue</inlineHelpText>
        <label>MQL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_Concern__c</fullName>
        <label>Main Concern</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Aesthetic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manager_Rating__c</fullName>
        <label>Manager Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Marked_as_Spam__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Akismet has marked this lead as spam.</description>
        <label>Marked as Spam?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__AutoConvert__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Convert All Leads From This Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MassConvert__DomainName__c</fullName>
        <formula>MID(Email, FIND(&apos;@&apos;, Email, 1)+1, (LEN(Email) - FIND(&apos;@&apos;, Email, 1)+1))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Domain Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Membership_Id__c</fullName>
        <label>Membership Id</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Electric_Bill__c</fullName>
        <label>Monthly Electric Bill</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Monthly_kWh_Usage__c</fullName>
        <label>Monthly kWh Usage</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NAICS_Code__c</fullName>
        <label>NAICS Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NAICS_Description__c</fullName>
        <label>NAICS Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Name_of_Utility_Bill__c</fullName>
        <label>Name of Utility Bill</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Native_Hawaiian_other_Pacific_Islander__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Native Hawaiian other Pacific Islander</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <label>Next Step</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone Screen</fullName>
                </value>
                <value>
                    <fullName>Interview</fullName>
                </value>
                <value>
                    <fullName>Second Interview</fullName>
                </value>
                <value>
                    <fullName>Offer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>No_Disability__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>No Disability</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Not_a_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Not a Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_stories__c</fullName>
        <label>Number of stories</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>indicates who was responsible for finding this lead</inlineHelpText>
        <label>Originator</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Method__c</fullName>
        <label>Other Method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Own_Building__c</fullName>
        <label>Own Building?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <description>Used for reporting</description>
        <formula>IF( Owner:User.IsActive =TRUE, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PV_System_Size__c</fullName>
        <description>PV System Size - DC (W) - used by Development to convert leads to Opportunities</description>
        <inlineHelpText>PV System Size - DC (W) - used by Development to convert leads to Opportunities</inlineHelpText>
        <label>PV System Size - DC (W)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personnel_Req__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>select the appropriate requisition that is tied to this employment lead</description>
        <inlineHelpText>select the appropriate requisition that is tied to this employment lead</inlineHelpText>
        <label>Personnel Req</label>
        <referenceTo>SFDC_Purchase_Requisition__c</referenceTo>
        <relationshipLabel>Employment Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Power_Usage_Pattern__c</fullName>
        <label>Power Usage Pattern</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Pre_Interview_Notes__c</fullName>
        <label>Pre-Interview Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Method__c</fullName>
        <description>How and when to best contact the lead.</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Preferred_Contact_Time__c</fullName>
        <label>Preferred Contact Time</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Morning</fullName>
                </value>
                <value>
                    <fullName>Afternoon</fullName>
                </value>
                <value>
                    <fullName>Evening</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <inlineHelpText>Main contact at this company.</inlineHelpText>
        <label>Primary Contact</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Timeframe__c</fullName>
        <label>Project Timeframe</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Comments__c</fullName>
        <description>This was provided by customer on Borrego website form</description>
        <inlineHelpText>This was provided by customer on Borrego website form</inlineHelpText>
        <label>Property Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Protected_Veteran__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>Protected Veteran</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rate_Schedule__c</fullName>
        <label>Rate Schedule</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason_for_Elimination__c</fullName>
        <description>disposition</description>
        <inlineHelpText>should explain why candidate was not chosen</inlineHelpText>
        <label>Reason for Elimination</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>NOT CONSIDERED, DID NOT MEET MINIMUM  Education</fullName>
                </value>
                <value>
                    <fullName>NOT CONSIDERED, DID NOT MEET MINIMUM  Experience</fullName>
                </value>
                <value>
                    <fullName>NOT CONSIDERED, DID NOT MEET MINIMUM  License/Certification</fullName>
                </value>
                <value>
                    <fullName>Considered, Not as Qualified: Skills</fullName>
                </value>
                <value>
                    <fullName>Considered, Not as Qualified: Education</fullName>
                </value>
                <value>
                    <fullName>Considered, Not as Qualified: Experience</fullName>
                </value>
                <value>
                    <fullName>Considered, Does Not Demonstrate Match for Job Sought</fullName>
                </value>
                <value>
                    <fullName>Considered, Could Not Reach Candidate</fullName>
                </value>
                <value>
                    <fullName>Phone Interview - Not as Qualified: Skills</fullName>
                </value>
                <value>
                    <fullName>Phone Interview - Not as Qualified: Education</fullName>
                </value>
                <value>
                    <fullName>Phone Interview - Not as Qualified: Experience</fullName>
                </value>
                <value>
                    <fullName>Phone Interview - Does Not Demonstrate Match for Job Sought</fullName>
                </value>
                <value>
                    <fullName>Interview - Not as Qualified: Skills</fullName>
                </value>
                <value>
                    <fullName>Interview - Not as Qualified: Education</fullName>
                </value>
                <value>
                    <fullName>Interview - Not as Qualified: Experience</fullName>
                </value>
                <value>
                    <fullName>Interview - Not as Qualified: Does Not Demonstrate Match for Job Sought</fullName>
                </value>
                <value>
                    <fullName>Offer Extended and Candidate Rejected</fullName>
                </value>
                <value>
                    <fullName>Offer Extended, Failed Reference Check</fullName>
                </value>
                <value>
                    <fullName>Incomplete Application</fullName>
                </value>
                <value>
                    <fullName>Duplicate for Same Position</fullName>
                </value>
                <value>
                    <fullName>Position Cancelled</fullName>
                </value>
                <value>
                    <fullName>Received After Offer Made</fullName>
                </value>
                <value>
                    <fullName>Withdrew Application At Any Point</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_To__c</fullName>
        <description>Name of person or company that refers customer to us.</description>
        <label>Referred To</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_by_Employee__c</fullName>
        <inlineHelpText>Pulls the employee name from the website relating to the question &quot;How did you hear about us?&quot;</inlineHelpText>
        <label>Referred by Employee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Resume_URL__c</fullName>
        <inlineHelpText>auto populated by website handler based on where resume attachment has been sent.</inlineHelpText>
        <label>Resume URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <description>Applicant&apos;s resume</description>
        <label>Resume</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Roof_Direction__c</fullName>
        <label>Roof Direction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>SouthWest</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>SouthEast</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roof_Material__c</fullName>
        <label>Roof Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ceramic (Spanish tile)</fullName>
                </value>
                <value>
                    <fullName>Composite Flat</fullName>
                </value>
                <value>
                    <fullName>Composite Sloped</fullName>
                </value>
                <value>
                    <fullName>Curved Concrete</fullName>
                </value>
                <value>
                    <fullName>Flat Concrete</fullName>
                </value>
                <value>
                    <fullName>Tar &amp; Gravel</fullName>
                </value>
                <value>
                    <fullName>Standing Seam</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Roof_Pitch__c</fullName>
        <label>Roof Pitch</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lead Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SIC_Code__c</fullName>
        <label>SIC Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SIC_Description__c</fullName>
        <label>SIC Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Salary_Range__c</fullName>
        <label>Salary Range</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>$35-50k</fullName>
                </value>
                <value>
                    <fullName>$50-65k</fullName>
                </value>
                <value>
                    <fullName>$65-80k</fullName>
                </value>
                <value>
                    <fullName>$80-95k</fullName>
                </value>
                <value>
                    <fullName>$95-110k</fullName>
                </value>
                <value>
                    <fullName>$110k-150k</fullName>
                </value>
                <value>
                    <fullName>$150k+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Shading_Issues__c</fullName>
        <label>Shading Issues</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Site_State__c</fullName>
        <inlineHelpText>The state where there is a potential opportunity</inlineHelpText>
        <label>Site State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Alabama</fullName>
                </value>
                <value>
                    <fullName>Alaska</fullName>
                </value>
                <value>
                    <fullName>Arizona</fullName>
                </value>
                <value>
                    <fullName>Arkansas</fullName>
                </value>
                <value>
                    <fullName>California</fullName>
                </value>
                <value>
                    <fullName>Colorado</fullName>
                </value>
                <value>
                    <fullName>Connecticut</fullName>
                </value>
                <value>
                    <fullName>Delaware</fullName>
                </value>
                <value>
                    <fullName>District of Columbia</fullName>
                </value>
                <value>
                    <fullName>Florida</fullName>
                </value>
                <value>
                    <fullName>Georgia</fullName>
                </value>
                <value>
                    <fullName>Hawaii</fullName>
                </value>
                <value>
                    <fullName>Idaho</fullName>
                </value>
                <value>
                    <fullName>Illinois</fullName>
                </value>
                <value>
                    <fullName>Indiana</fullName>
                </value>
                <value>
                    <fullName>Iowa</fullName>
                </value>
                <value>
                    <fullName>Kansas</fullName>
                </value>
                <value>
                    <fullName>Kentucky</fullName>
                </value>
                <value>
                    <fullName>Louisiana</fullName>
                </value>
                <value>
                    <fullName>Maine</fullName>
                </value>
                <value>
                    <fullName>Maryland</fullName>
                </value>
                <value>
                    <fullName>Massachusetts</fullName>
                </value>
                <value>
                    <fullName>Michigan</fullName>
                </value>
                <value>
                    <fullName>Minnesota</fullName>
                </value>
                <value>
                    <fullName>Mississippi</fullName>
                </value>
                <value>
                    <fullName>Missouri</fullName>
                </value>
                <value>
                    <fullName>Montana</fullName>
                </value>
                <value>
                    <fullName>Multiple States</fullName>
                </value>
                <value>
                    <fullName>Nebraska</fullName>
                </value>
                <value>
                    <fullName>Nevada</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_Set__c</fullName>
        <label>Skill Set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accounting</fullName>
                </value>
                <value>
                    <fullName>Applications Engineer</fullName>
                </value>
                <value>
                    <fullName>Design Engineer</fullName>
                </value>
                <value>
                    <fullName>Electrical Engineer</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Management</fullName>
                </value>
                <value>
                    <fullName>Project Management</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Site Super</fullName>
                </value>
                <value>
                    <fullName>Structural Engineer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Specific_Staffing_Agency__c</fullName>
        <description>To capture the specific staffing agency that referred you</description>
        <inlineHelpText>Please enter the specific staffing agency that referred you</inlineHelpText>
        <label>Specific Staffing Agency</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyReminder__c</fullName>
        <defaultValue>&apos;&apos;</defaultValue>
        <label>SurveyReminder</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__reminderStringSize__c</fullName>
        <formula>LEN(TIMBASURVEYS__SurveyReminder__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>reminderStringSize</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timezone__c</fullName>
        <label>Timezone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EST</fullName>
                </value>
                <value>
                    <fullName>PST</fullName>
                </value>
                <value>
                    <fullName>CST</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unmailable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Email address is unmailable</inlineHelpText>
        <label>Unmailable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_with_WhitePages__c</fullName>
        <inlineHelpText>Date/Time the name and phone number fields were updated via WhitePages.</inlineHelpText>
        <label>Updated with WhitePages</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Respond Immediately</fullName>
                </value>
                <value>
                    <fullName>Not Urgent</fullName>
                </value>
                <value>
                    <fullName>Long Term</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Company__c</fullName>
        <label>Utility Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PG&amp;E</fullName>
                </value>
                <value>
                    <fullName>SCE</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E</fullName>
                </value>
                <value>
                    <fullName>NSTAR</fullName>
                </value>
                <value>
                    <fullName>National Grid</fullName>
                </value>
                <value>
                    <fullName>CPAU</fullName>
                </value>
                <value>
                    <fullName>SVP</fullName>
                </value>
                <value>
                    <fullName>Healdsburg</fullName>
                </value>
                <value>
                    <fullName>SMUD</fullName>
                </value>
                <value>
                    <fullName>AP+T</fullName>
                </value>
                <value>
                    <fullName>PSNH</fullName>
                </value>
                <value>
                    <fullName>IID</fullName>
                </value>
                <value>
                    <fullName>LADWP</fullName>
                </value>
                <value>
                    <fullName>Bear Valley Electric</fullName>
                </value>
                <value>
                    <fullName>GWP</fullName>
                </value>
                <value>
                    <fullName>Roseville Electric</fullName>
                </value>
                <value>
                    <fullName>Other - Northern CA</fullName>
                </value>
                <value>
                    <fullName>Other - Southern CA</fullName>
                </value>
                <value>
                    <fullName>Other - East Coast</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>PREPA</fullName>
                </value>
                <value>
                    <fullName>NYSEG</fullName>
                </value>
                <value>
                    <fullName>Central Hudson G&amp;E</fullName>
                </value>
                <value>
                    <fullName>Orange and Rockland</fullName>
                </value>
                <value>
                    <fullName>Rochester Gas &amp; Electric</fullName>
                </value>
                <value>
                    <fullName>ConEd</fullName>
                </value>
                <value>
                    <fullName>LIPA</fullName>
                </value>
                <value>
                    <fullName>Oncor</fullName>
                </value>
                <value>
                    <fullName>TEP</fullName>
                </value>
                <value>
                    <fullName>Austin Energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Utility_Rate__c</fullName>
        <inlineHelpText>What is the host customer&apos;s or offtaker&apos;s current utility rate? You can find this on their bill.</inlineHelpText>
        <label>Utility Rate</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SDG&amp;E A</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E AL-TOU</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E AL-TOU DGR</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E PA</fullName>
                </value>
                <value>
                    <fullName>SDG&amp;E PA-T-1</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E A6</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E A-10</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E A-10 TOU</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E E-19</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E E-20</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E AG-1</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E AG-4</fullName>
                </value>
                <value>
                    <fullName>PG&amp;E AG-5</fullName>
                </value>
                <value>
                    <fullName>SCE GS-1</fullName>
                </value>
                <value>
                    <fullName>SCE GS-2</fullName>
                </value>
                <value>
                    <fullName>SCE GS-2 TOU</fullName>
                </value>
                <value>
                    <fullName>SCE GS-3-A</fullName>
                </value>
                <value>
                    <fullName>SCE-GS-3-B</fullName>
                </value>
                <value>
                    <fullName>SCE-GS-3-R</fullName>
                </value>
                <value>
                    <fullName>SCE TOU-8-A</fullName>
                </value>
                <value>
                    <fullName>SCE-TOU-8-B</fullName>
                </value>
                <value>
                    <fullName>SCE-TOU-8-CPP</fullName>
                </value>
                <value>
                    <fullName>SCE-TOU-8-R</fullName>
                </value>
                <value>
                    <fullName>SMUD GS-TOU-1</fullName>
                </value>
                <value>
                    <fullName>SMUD GS-TOU-2</fullName>
                </value>
                <value>
                    <fullName>SMUD GS-TOU-3</fullName>
                </value>
                <value>
                    <fullName>LADWP A1A</fullName>
                </value>
                <value>
                    <fullName>LADWP A2A</fullName>
                </value>
                <value>
                    <fullName>NSTAR B7-TOU</fullName>
                </value>
                <value>
                    <fullName>NSTAR B5-TOU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vertical__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Vertical on Opportunity - Used by Development to convert leads to Opportunities</description>
        <inlineHelpText>Vertical on Opportunity - Used by Development to convert leads to Opportunities</inlineHelpText>
        <label>Vertical</label>
        <referenceTo>CostAssumption__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Veteran_Not_Protected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>for affirmative action application</inlineHelpText>
        <label>Veteran Not Protected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Veteran__c</fullName>
        <description>web form</description>
        <inlineHelpText>affirmative action form</inlineHelpText>
        <label>Veteran</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I identify as one or more of the classifications of protected veterans listed above</fullName>
                </value>
                <value>
                    <fullName>I identify as a veteran, just not a protected veteran</fullName>
                </value>
                <value>
                    <fullName>I am not a veteran</fullName>
                </value>
                <value>
                    <fullName>I do not wish to self-identify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>